@@ -10,6 +10,8 @@ Revision history for Perl module Math::Prime::Util
 
     - Slightly faster PP sieving using better code from Perlmonks.
 
+    - XS Lucas sequence works with even valued n.
+
     [Misc]
 
     - Work with old MPFR (some test failures in older Win32 systems).
